# last_resort

./: CMakeLists.txt  README.md
last_resort/: CMakeLists.txt  last_resort.cpp  last_resort.h  main.cpp
src/: CMakeLists.txt  main.cpp  smesh.cpp  smesh.h
