# CMakeList.txt : CMake project for last_resort, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (last_resort "last_resort.cpp" "last_resort.h")

# TODO: Add tests and install targets if needed.
